<resources>
    <string name="app_name">AppG9</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="evento">Evento</string>
    <string name="contacto">Contacto</string>
    <string name="fecha">Fecha</string>
    <string name="tipo">Tipo</string>
    <string name="hora">Hora</string>
    <string name="valor">Valor</string>
    <string name="imagen_del_evento">Imagen del evento</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="nombre_evento">Nombre evento</string>

</resources>