<?xml version="1.0" encoding="utf-8"?>


  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        tools:context=".CreateEvent" >

      <ImageView
          android:id="@+id/new_img_form"
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:layout_marginBottom="20dp"
          android:contentDescription="@string/imagen_del_evento"
          android:padding="10dp"
          app:srcCompat="@android:drawable/ic_menu_camera" />

      <Button
          android:id="@+id/button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="30dp"
          android:backgroundTint="#203DA3"
          android:onClick="loagImg"
          android:text="@string/seleccionar_imagen" />

      <EditText
          android:id="@+id/event_form_id"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginBottom="10dp"
          android:ems="10"
          android:hint="@string/nombre_evento"
          android:inputType="textPersonName"
          android:text="my event" />

      <EditText
          android:id="@+id/type_form_id"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginBottom="10dp"
          android:ems="10"
          android:hint="@string/tipo"
          android:inputType="textPersonName"
          android:text="Cultural"/>

      <EditText
          android:id="@+id/time_form_id"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginBottom="10dp"
          android:ems="10"
          android:hint="@string/hora"
          android:inputType="time"
          android:text="10:30"/>

      <EditText
          android:id="@+id/date_form_id"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginBottom="10dp"
          android:ems="10"
          android:hint="@string/fecha"
          android:inputType="date"
          android:text="12/10/2021"/>

      <EditText
          android:id="@+id/value_form_id"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginBottom="10dp"
          android:ems="10"
          android:hint="@string/valor"
          android:inputType="numberSigned"
          android:text="20000"/>

      <EditText
          android:id="@+id/contact_form_id"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginBottom="10dp"
          android:ems="10"
          android:hint="@string/contacto"
          android:inputType="textPersonName"
          android:text="yo"/>

      <Button
          android:id="@+id/btn_getUbicacion"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:backgroundTint="#203DA3"
          android:onClick="gotoActivityMap"
          android:text="Ubicacion" />

      <Button
          android:id="@+id/btn_createEvent"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:backgroundTint="#203DA3"
          android:onClick="crearteEvent"
          android:text="Crear Evento" />
    </LinearLayout>
  </ScrollView>